fix filter spacing on topic view

--- a/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/view-data-listing.css
@@ -25,6 +25,10 @@ input[type="checkbox"] {
   margin-bottom: 0;
 }
 
+form#views-exposed-form-data-listing-topic-page-topic > * + * {
+  margin-top: 20px;
+}
+
 #filter-toggle {
   display: flex;
   background-color: #e8eef4;
